add_library(filter
            STATIC
            revert.cc
            revert.hh
            inputFilter.cc
            inputFilter.hh
            outputFileFilter.cc
            outputFileFilter.hh
            outputWindowFilter.cc
            outputWindowFilter.hh
            outputPicturesFilter.cc
            outputPicturesFilter.hh
            ErodeFilter.cc
            ErodeFilter.hh
            DilateFilter.cc
            DilateFilter.hh
            EdgesDetectionFilter.cc
            EdgesDetectionFilter.hh
            BlackWhiteFilter.cc
            BlackWhiteFilter.hh
            FaceDetectionFilter.hh
            FaceDetectionFilter.cc
            MixFilter.cc
            MixFilter.hh
            TransparenceFilter.cc
            TransparenceFilter.hh
)
